Chore: bump github-actions version

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -27,7 +27,7 @@ jobs:
           cache: false
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@c67416616c29c3c48d26b59c45cadb56966d80aa
+        uses: golangci/golangci-lint-action@v4
         with:
           version: latest
           args: --timeout=3m
