Chore: remove linter config deprecations

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,6 +1,7 @@
 linters:
   disable-all: true
   enable:
+    - copyloopvar
     - gci
     - gofumpt
     - gosimple
@@ -18,5 +19,14 @@ linters-settings:
       - standard
       - prefix(github.com/yaling888/clash)
       - default
-  staticcheck:
-    go: '1.22'
+
+run:
+  # default concurrency is a available CPU number
+  concurrency: 4
+
+  # Define the Go version limit.
+  # Default: use Go version from the go.mod file, fallback on the env var `GOVERSION`, fallback on 1.17
+  # go: '1.22'
+
+  # timeout for analysis, e.g. 30s, 5m, default is 1m
+  timeout: 5m
